Completed Movie details page

--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
 
 		<!-- Popular Movies -->
 		<section class="container">
-			<h2>Popular Movies</h2>
-			<div id="popular-movies" class="grid">
-				<!-- <div class="card">
+			<main>
+				<h2>Popular Movies</h2>
+				<div id="popular-movies" class="grid">
+					<!-- <div class="card">
 					<a href="movie-details.html?id=1">
 						<img
 							src="images/no-image.jpg"
@@ -225,10 +226,10 @@
 						</p>
 					</div>
 				</div> -->
-			</div>
+				</div>
+			</main>
 		</section>
-
-		<!-- <!-- Footer -->
+		<!-- Footer -->
 		<footer class="main-footer">
 			<div class="container">
 				<div class="logo"><span>FLIXX</span></div>
