--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/spinner.css" />
 		<script src="lib/swiper.js"></script>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+		/>
+
+		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 		<script src="js/script.js" defer></script>
 		<title>Flixx</title>
 	</head>
