Done with Search functionality

--- a/search.html
+++ b/search.html
@@ -69,7 +69,7 @@
 		<section id="search-results-wrapper" class="container">
 			<heading id="search-results-heading"> </heading>
 			<div id="search-results" class="grid">
-				<div class="card">
+				<!-- <div class="card">
 					<a href="#">
 						<img
 							src="images/no-image.jpg"
@@ -204,7 +204,7 @@
 							>
 						</p>
 					</div>
-				</div>
+				</div> -->
 			</div>
 			<div id="pagination">
 				<div class="pagination">
