feat :pagination and search

--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/spinner.css" />
         <script src="lib/swiper.js"></script>
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
-        />
-
-        <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
         <script src="js/script.js" defer></script>
         <title>Flixx</title>
     </head>
@@ -40,7 +34,6 @@
                 </nav>
             </div>
         </header>
-        <!-- hey -->
 
         <!-- Now Playing Section -->
         <section class="now-playing">
@@ -85,148 +78,10 @@
 
         <!-- Popular Movies -->
         <section class="container">
-            <main>
-                <h2>Popular Movies</h2>
-                <div id="popular-movies" class="grid">
-                    <!-- <div class="card">
-					<a href="movie-details.html?id=1">
-						<img
-							src="images/no-image.jpg"
-							class="card-img-top"
-							alt="Movie Title"
-						/>
-					</a>
-					<div class="card-body">
-						<h5 class="card-title">Movie Title</h5>
-						<p class="card-text">
-							<small class="text-muted"
-								>Release: XX/XX/XXXX</small
-							>
-						</p>
-					</div>
-				</div>
-				<div class="card">
-					<a href="movie-details.html?id=1">
-						<img
-							src="images/no-image.jpg"
-							class="card-img-top"
-							alt="Movie Title"
-						/>
-					</a>
-					<div class="card-body">
-						<h5 class="card-title">Movie Title</h5>
-						<p class="card-text">
-							<small class="text-muted"
-								>Release: XX/XX/XXXX</small
-							>
-						</p>
-					</div>
-				</div>
-				<div class="card">
-					<a href="movie-details.html?id=1">
-						<img
-							src="images/no-image.jpg"
-							class="card-img-top"
-							alt="Movie Title"
-						/>
-					</a>
-					<div class="card-body">
-						<h5 class="card-title">Movie Title</h5>
-						<p class="card-text">
-							<small class="text-muted"
-								>Release: XX/XX/XXXX</small
-							>
-						</p>
-					</div>
-				</div>
-				<div class="card">
-					<a href="movie-details.html?id=1">
-						<img
-							src="images/no-image.jpg"
-							class="card-img-top"
-							alt="Movie Title"
-						/>
-					</a>
-					<div class="card-body">
-						<h5 class="card-title">Movie Title</h5>
-						<p class="card-text">
-							<small class="text-muted"
-								>Release: XX/XX/XXXX</small
-							>
-						</p>
-					</div>
-				</div>
-				<div class="card">
-					<a href="movie-details.html?id=1">
-						<img
-							src="images/no-image.jpg"
-							class="card-img-top"
-							alt="Movie Title"
-						/>
-					</a>
-					<div class="card-body">
-						<h5 class="card-title">Movie Title</h5>
-						<p class="card-text">
-							<small class="text-muted"
-								>Release: XX/XX/XXXX</small
-							>
-						</p>
-					</div>
-				</div>
-				<div class="card">
-					<a href="movie-details.html?id=1">
-						<img
-							src="images/no-image.jpg"
-							class="card-img-top"
-							alt="Movie Title"
-						/>
-					</a>
-					<div class="card-body">
-						<h5 class="card-title">Movie Title</h5>
-						<p class="card-text">
-							<small class="text-muted"
-								>Release: XX/XX/XXXX</small
-							>
-						</p>
-					</div>
-				</div>
-				<div class="card">
-					<a href="movie-details.html?id=1">
-						<img
-							src="images/no-image.jpg"
-							class="card-img-top"
-							alt="Movie Title"
-						/>
-					</a>
-					<div class="card-body">
-						<h5 class="card-title">Movie Title</h5>
-						<p class="card-text">
-							<small class="text-muted"
-								>Release: XX/XX/XXXX</small
-							>
-						</p>
-					</div>
-				</div>
-				<div class="card">
-					<a href="movie-details.html?id=1">
-						<img
-							src="images/no-image.jpg"
-							class="card-img-top"
-							alt="Movie Title"
-						/>
-					</a>
-					<div class="card-body">
-						<h5 class="card-title">Movie Title</h5>
-						<p class="card-text">
-							<small class="text-muted"
-								>Release: XX/XX/XXXX</small
-							>
-						</p>
-					</div>
-				</div> -->
-                </div>
-            </main>
+            <h2>Popular Movies</h2>
+            <div id="popular-movies" class="grid"></div>
         </section>
+
         <!-- Footer -->
         <footer class="main-footer">
             <div class="container">
