--- a/tv-details.html
+++ b/tv-details.html
@@ -48,13 +48,13 @@
                 <div class="logo"><span>FLIXX</span></div>
                 <div class="social-links">
                     <a href="https://www.facebook.com" target="_blank"
-                        ><i class="fab fa-facebook-f"></i
+                        ><i class="fab fa-github"></i
                     ></a>
                     <a href="https://www.twitter.com" target="_blank"
                         ><i class="fab fa-twitter"></i
                     ></a>
                     <a href="https://www.instagram.com" target="_blank"
-                        ><i class="fab fa-instagram"></i
+                        ><i class="fab fa-linkedin"></i
                     ></a>
                 </div>
             </div>
