fix : footer updated

--- a/shows.html
+++ b/shows.html
@@ -44,14 +44,16 @@
             <div class="container">
                 <div class="logo"><span>FLIXX</span></div>
                 <div class="social-links">
-                    <a href="https://www.facebook.com" target="_blank"
-                        ><i class="fab fa-facebook-f"></i
+                    <a href="https://github.com/WiseyXD" target="_blank"
+                        ><i class="fab fa-github"></i
                     ></a>
-                    <a href="https://www.twitter.com" target="_blank"
+                    <a href="https://x.com/AryanNagbanshi" target="_blank"
                         ><i class="fab fa-twitter"></i
                     ></a>
-                    <a href="https://www.instagram.com" target="_blank"
-                        ><i class="fab fa-instagram"></i
+                    <a
+                        href="https://www.linkedin.com/in/aryan-nagbanshi-9109911b5/"
+                        target="_blank"
+                        ><i class="fab fa-linkedin"></i
                     ></a>
                 </div>
             </div>
